# GraphDB_Automatization

./: .gitignore  README.md  main.py  pyproject.toml
data/: test_pandas.py  test_table.xlsx
src/config/: config.py
src/controllers/: app_controller.py
src/services/: graph_service.py  image_generator.py  table_analyzer.py  table_reader.py
src/ui/: app_ui.py
